Login text overlap fixed, pre-reg page box fixed

--- a/registration/registration-client/src/main/resources/application.css
+++ b/registration/registration-client/src/main/resources/application.css
@@ -881,7 +881,7 @@ top right bottom left
 	-fx-prompt-text-fill: #020F59;
 	-fx-font-size: 1.2em;
 	-fx-text-fill : #020F59;
-	-fx-padding : 5.0px 0.0px -7.0px -2.0px;
+	-fx-padding : -7.0px 0.0px -2.0px -2.0px;
 	-fx-border-insets : 5 -2 -5 44;
 }
 .demographicLangHeader{
